# industrial_cpp

./: .gitignore
hw1/: CMakeLists.txt
hw1/includes/: logger.hpp
hw1/includes/characters/: base.hpp  civilian.hpp  commissioner.hpp  doctor.hpp  mafia.hpp  maniac.hpp
hw1/includes/my_shared_ptr/: shared_ptr.hpp
hw1/source/: mafia.cpp
hw1/source/shared_ptr/: shared_ptr.h
hw2/: experiments.py
hw2/input/: generator.py
hw2/src/: main.cpp  struct.cpp  struct.h
hw2/task/: main.tex
hw3/includes/: includes.h
hw3/src/: main.cpp
hw3/tests/: test.cpp
hw4/: main.cpp  plot.py  research.cpp
hw4/fields/: eight.txt  flasher.txt  planer.txt
hw4/result/: data.txt  series_10_run_10_sol.txt  series_10_run_10_sol_after100.txt  series_10_run_1_sol.txt  series_10_run_1_sol_after100.txt  series_10_run_2_sol.txt  series_10_run_2_sol_after100.txt  series_10_run_3_sol.txt  series_10_run_3_sol_after100.txt  series_10_run_4_sol.txt  series_10_run_4_sol_after100.txt  series_10_run_5_sol.txt  series_10_run_5_sol_after100.txt  series_10_run_6_sol.txt  series_10_run_6_sol_after100.txt  series_10_run_7_sol.txt  series_10_run_7_sol_after100.txt  series_10_run_8_sol.txt  series_10_run_8_sol_after100.txt  series_10_run_9_sol.txt  series_10_run_9_sol_after100.txt  series_1_run_10_sol.txt  series_1_run_10_sol_after100.txt  series_1_run_1_sol.txt  series_1_run_1_sol_after100.txt  series_1_run_2_sol.txt  series_1_run_2_sol_after100.txt  series_1_run_3_sol.txt  series_1_run_3_sol_after100.txt  series_1_run_4_sol.txt  series_1_run_4_sol_after100.txt  series_1_run_5_sol.txt  (+169 more)
(+8 files in other folders)
